--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
+    id 'kotlin-android'
+
 }
 
 android {
@@ -18,6 +20,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "API_KEY","\"e9ceae46dfb46e6304d901047a63ad63\""
+        buildConfigField "String", "BASE_URL","\"https://api.themoviedb.org/3/\""
+
     }
 
 
@@ -33,17 +37,19 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs = ['-Xjvm-default=compatibility']
     }
+
     buildFeatures {
         dataBinding true
     }
+
 }
 
 dependencies {
     def lifecycle_version = "2.5.0-alpha03"
     def arch_version = "2.1.0"
     def roomVersion = "2.4.2"
-
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -55,7 +61,8 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
     // Saved state module for ViewModel
     implementation("androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version")
-
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version")
     // Annotation processor
     kapt("androidx.lifecycle:lifecycle-compiler:$lifecycle_version")
     //room
@@ -63,8 +70,6 @@ dependencies {
     kapt("androidx.room:room-compiler:$roomVersion")
     //  Kotlin Extensions and Coroutines support for Room
     implementation("androidx.room:room-ktx:$roomVersion")
-
-
     // To use Kotlin annotation processing tool (kapt)
     kapt("androidx.room:room-compiler:$roomVersion")
     // To use Kotlin Symbolic Processing (KSP)
@@ -73,8 +78,11 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9")
     //dagger
-    implementation 'com.google.dagger:dagger:2.41'
-    kapt 'com.google.dagger:dagger-compiler:2.41'
+    implementation "com.google.dagger:dagger:2.41"
+    implementation "com.google.dagger:dagger-android:2.41"
+    implementation "com.google.dagger:dagger-android-support:2.41"
+    kapt "com.google.dagger:dagger-compiler:2.41"
+    kapt "com.google.dagger:dagger-android-processor:2.41"
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
